Rename 'name' prop in join game to 'playerName'
