# docs/openapi.yaml
@@ -128,7 +128,7 @@ paths:
                 properties:
                   game:
                     $ref: '#/components/schemas/Game'
-                  yourId:
+                  playerId:
                     type: string
                     format: uuid
                     description: The ID of the Player that joined the game. Use it to take turns rolling the dice.
@@ -318,9 +318,9 @@ components:
     JoinGameRequest:
       type: object
       required:
-        - name
+        - playerName
       properties:
-        name:
+        playerName:
           type: string
           description: The name of the player.
 
